--- a/pages/cs-CZ/docs/server/config.mdx
+++ b/pages/cs-CZ/docs/server/config.mdx
@@ -59,8 +59,8 @@ Podporované proměnné prostředí jsou následující:
 
 | Proměnná prostředí | Konfigurační položka | Příklad                                    |
 | ------------------ | -------------------- | :----------------------------------------- |
-| PPANEL_DB          | MySQL konfigurace    | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS       | Redis konfigurace    | redis://localhost:6379                     |
+| ARCHNET_DB          | MySQL konfigurace    | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS       | Redis konfigurace    | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
