--- a/pages/de-DE/docs/server/config.mdx
+++ b/pages/de-DE/docs/server/config.mdx
@@ -59,8 +59,8 @@ Die unterstützten Umgebungsvariablen sind wie folgt:
 
 | Umgebungsvariable | Konfiguration       | Beispiel                                   |
 | ----------------- | ------------------- | :----------------------------------------- |
-| PPANEL_DB         | MySQL-Konfiguration | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS      | Redis-Konfiguration | redis://localhost:6379                     |
+| ARCHNET_DB         | MySQL-Konfiguration | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS      | Redis-Konfiguration | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
