--- a/pages/en-US/docs/server/config.mdx
+++ b/pages/en-US/docs/server/config.mdx
@@ -59,8 +59,8 @@ The supported environment variables are as follows:
 
 | Environment Variable | Configuration Item  | Example                                    |
 | -------------------- | ------------------- | :----------------------------------------- |
-| PPANEL_DB            | MySQL Configuration | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS         | Redis Configuration | redis://localhost:6379                     |
+| ARCHNET_DB            | MySQL Configuration | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS         | Redis Configuration | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
