--- a/pages/es-ES/docs/server/config.mdx
+++ b/pages/es-ES/docs/server/config.mdx
@@ -59,8 +59,8 @@ Las variables de entorno soportadas son las siguientes:
 
 | Variable de entorno | Opción de configuración | Ejemplo                                    |
 | ------------------- | ----------------------- | :----------------------------------------- |
-| PPANEL_DB           | Configuración de MySQL  | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS        | Configuración de Redis  | redis://localhost:6379                     |
+| ARCHNET_DB           | Configuración de MySQL  | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS        | Configuración de Redis  | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
