--- a/pages/fa-IR/docs/server/config.mdx
+++ b/pages/fa-IR/docs/server/config.mdx
@@ -59,8 +59,8 @@ Administer:
 
 | متغیر محیطی  | گزینه پیکربندی | نمونه                                       |
 | ------------ | -------------- | :------------------------------------------ |
-| PPANEL_DB    | پیکربندی MySQL | root:password\@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS | پیکربندی Redis | redis\://localhost:6379"                    |
+| ARCHNET_DB    | پیکربندی MySQL | root:password\@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS | پیکربندی Redis | redis\://localhost:6379"                    |
 
 import Giscus from '@/components/giscus';
 
