--- a/pages/fr-FR/docs/server/config.mdx
+++ b/pages/fr-FR/docs/server/config.mdx
@@ -59,8 +59,8 @@ Les variables d'environnement supportées sont les suivantes :
 
 | Variable d'environnement | Élément de configuration | Exemple                                    |
 | ------------------------ | ------------------------ | :----------------------------------------- |
-| PPANEL_DB                | Configuration MySQL      | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS             | Configuration Redis      | redis://localhost:6379                     |
+| ARCHNET_DB                | Configuration MySQL      | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS             | Configuration Redis      | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
