--- a/pages/ja-JP/docs/server/config.mdx
+++ b/pages/ja-JP/docs/server/config.mdx
@@ -59,8 +59,8 @@ Administer:
 
 | 環境変数     | 設定項目  | 例                                          |
 | ------------ | --------- | :------------------------------------------ |
-| PPANEL_DB    | MySQL設定 | root:password\@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS | Redis設定 | redis\://localhost:6379"                    |
+| ARCHNET_DB    | MySQL設定 | root:password\@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS | Redis設定 | redis\://localhost:6379"                    |
 
 import Giscus from '@/components/giscus';
 
