--- a/pages/no-NO/docs/server/config.mdx
+++ b/pages/no-NO/docs/server/config.mdx
@@ -59,8 +59,8 @@ Støttede miljøvariabler er som følger:
 
 | Miljøvariabel | Konfigurasjonsalternativ | Eksempel                                   |
 | ------------- | ------------------------ | :----------------------------------------- |
-| PPANEL_DB     | MySQL-konfigurasjon      | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS  | Redis-konfigurasjon      | redis://localhost:6379                     |
+| ARCHNET_DB     | MySQL-konfigurasjon      | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS  | Redis-konfigurasjon      | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
