--- a/pages/pl-PL/docs/server/binary.mdx
+++ b/pages/pl-PL/docs/server/binary.mdx
@@ -315,7 +315,7 @@ Administer:
 ```shell
 $ cat > /etc/systemd/system/archnet.service <<EOF
 [Unit]
-Description=Serwer PPANEL
+Description=Serwer ARCHNET
 After=network.target
 
 [Service]
