--- a/pages/pl-PL/docs/server/config.mdx
+++ b/pages/pl-PL/docs/server/config.mdx
@@ -59,8 +59,8 @@ Obsługiwane zmienne środowiskowe są następujące:
 
 | Zmienna środowiskowa | Element konfiguracyjny | Przykład                                   |
 | -------------------- | ---------------------- | :----------------------------------------- |
-| PPANEL_DB            | Konfiguracja MySQL     | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS         | Konfiguracja Redis     | redis://localhost:6379                     |
+| ARCHNET_DB            | Konfiguracja MySQL     | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS         | Konfiguracja Redis     | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
