--- a/pages/ru-RU/docs/server/config.mdx
+++ b/pages/ru-RU/docs/server/config.mdx
@@ -59,8 +59,8 @@ Administer:
 
 | Переменная окружения | Параметр конфигурации | Пример                                     |
 | -------------------- | --------------------- | :----------------------------------------- |
-| PPANEL_DB            | Конфигурация MySQL    | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS         | Конфигурация Redis    | redis://localhost:6379                     |
+| ARCHNET_DB            | Конфигурация MySQL    | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS         | Конфигурация Redis    | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
