--- a/pages/tr-TR/docs/server/config.mdx
+++ b/pages/tr-TR/docs/server/config.mdx
@@ -59,8 +59,8 @@ Desteklenen ortam değişkenleri aşağıdaki gibidir:
 
 | Ortam Değişkeni | Yapılandırma Öğesi   | Örnek                                      |
 | --------------- | -------------------- | :----------------------------------------- |
-| PPANEL_DB       | MySQL yapılandırması | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS    | Redis yapılandırması | redis://localhost:6379"                    |
+| ARCHNET_DB       | MySQL yapılandırması | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS    | Redis yapılandırması | redis://localhost:6379"                    |
 
 import Giscus from '@/components/giscus';
 
