--- a/pages/uk-UA/docs/server/config.mdx
+++ b/pages/uk-UA/docs/server/config.mdx
@@ -59,8 +59,8 @@ Administer:
 
 | Змінна середовища | Налаштування       | Приклад                                     |
 | ----------------- | ------------------ | :------------------------------------------ |
-| PPANEL_DB         | Налаштування MySQL | root:password\@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS      | Налаштування Redis | redis\://localhost:6379                     |
+| ARCHNET_DB         | Налаштування MySQL | root:password\@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS      | Налаштування Redis | redis\://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
