--- a/pages/zh-CN/docs/server/binary.mdx
+++ b/pages/zh-CN/docs/server/binary.mdx
@@ -236,7 +236,7 @@ EOF
 ```shell
 cat > /etc/systemd/system/archnet.service <<EOF
 [Unit]
-Description=PPANEL Server
+Description=ARCHNET Server
 After=network.target
 
 [Service]
