--- a/pages/zh-HK/docs/server/config.mdx
+++ b/pages/zh-HK/docs/server/config.mdx
@@ -59,8 +59,8 @@ Administer:
 
 | 環境變量     | 配置項    | 示例                                        |
 | ------------ | --------- | :------------------------------------------ |
-| PPANEL_DB    | MySQL配置 | root:password\@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS | Redis配置 | redis\://localhost:6379"                    |
+| ARCHNET_DB    | MySQL配置 | root:password\@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS | Redis配置 | redis\://localhost:6379"                    |
 
 import Giscus from '@/components/giscus';
 
