--- a/pages/fa-IR/docs/server/binary.mdx
+++ b/pages/fa-IR/docs/server/binary.mdx
@@ -317,7 +317,7 @@ Administer:
 ```shell
 $ cat > /etc/systemd/system/archnet.service <<EOF
 [Unit]
-Description=PPANEL Server
+Description=ARCHNET Server
 After=network.target
 
 [Service]
