--- a/pages/fi-FI/docs/server/config.mdx
+++ b/pages/fi-FI/docs/server/config.mdx
@@ -59,8 +59,8 @@ Tuetut ympäristömuuttujat ovat seuraavat:
 
 | Ympäristömuuttuja | Konfiguraatio   | Esimerkki                                   |
 | ----------------- | --------------- | :------------------------------------------ |
-| PPANEL_DB         | MySQL-asetukset | root:password\@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS      | Redis-asetukset | redis\://localhost:6379                     |
+| ARCHNET_DB         | MySQL-asetukset | root:password\@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS      | Redis-asetukset | redis\://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
