--- a/pages/fr-FR/docs/server/binary.mdx
+++ b/pages/fr-FR/docs/server/binary.mdx
@@ -315,7 +315,7 @@ Administer:
 ```shell
 $ cat > /etc/systemd/system/archnet.service <<EOF
 [Unit]
-Description=Serveur PPANEL
+Description=Serveur ARCHNET
 After=network.target
 
 [Service]
