--- a/pages/hi-IN/docs/server/config.mdx
+++ b/pages/hi-IN/docs/server/config.mdx
@@ -59,8 +59,8 @@ Administer:
 
 | पर्यावरण चर  | कॉन्फ़िगरेशन आइटम  | उदाहरण                                      |
 | ------------ | ------------------ | :------------------------------------------ |
-| PPANEL_DB    | MySQL कॉन्फ़िगरेशन | root:password\@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS | Redis कॉन्फ़िगरेशन | redis\://localhost:6379"                    |
+| ARCHNET_DB    | MySQL कॉन्फ़िगरेशन | root:password\@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS | Redis कॉन्फ़िगरेशन | redis\://localhost:6379"                    |
 
 import Giscus from '@/components/giscus';
 
