--- a/pages/hu-HU/docs/server/binary.mdx
+++ b/pages/hu-HU/docs/server/binary.mdx
@@ -309,7 +309,7 @@ Administer:
 ```shell
 $ cat > /etc/systemd/system/archnet.service <<EOF
 [Unit]
-Description=PPANEL Server
+Description=ARCHNET Server
 After=network.target
 
 [Service]
