--- a/pages/hu-HU/docs/server/config.mdx
+++ b/pages/hu-HU/docs/server/config.mdx
@@ -59,8 +59,8 @@ A támogatott környezeti változók a következők:
 
 | Környezeti változó | Konfigurációs elem | Példa                                       |
 | ------------------ | ------------------ | :------------------------------------------ |
-| PPANEL_DB          | MySQL konfiguráció | root:password\@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS       | Redis konfiguráció | redis\://localhost:6379                     |
+| ARCHNET_DB          | MySQL konfiguráció | root:password\@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS       | Redis konfiguráció | redis\://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
