--- a/pages/pt-BR/docs/server/binary.mdx
+++ b/pages/pt-BR/docs/server/binary.mdx
@@ -315,7 +315,7 @@ Administer:
 ```shell
 $ cat > /etc/systemd/system/archnet.service <<EOF
 [Unit]
-Description=Servidor PPANEL
+Description=Servidor ARCHNET
 After=network.target
 
 [Service]
