--- a/pages/pt-BR/docs/server/config.mdx
+++ b/pages/pt-BR/docs/server/config.mdx
@@ -59,8 +59,8 @@ As variáveis de ambiente suportadas são as seguintes:
 
 | Variável de Ambiente | Item de Configuração  | Exemplo                                    |
 | -------------------- | --------------------- | :----------------------------------------- |
-| PPANEL_DB            | Configuração do MySQL | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS         | Configuração do Redis | redis://localhost:6379                     |
+| ARCHNET_DB            | Configuração do MySQL | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS         | Configuração do Redis | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
