--- a/pages/ro-RO/docs/server/config.mdx
+++ b/pages/ro-RO/docs/server/config.mdx
@@ -59,8 +59,8 @@ Variabilele de mediu acceptate sunt următoarele:
 
 | Variabilă de mediu | Element de configurare | Exemplu                                    |
 | ------------------ | ---------------------- | :----------------------------------------- |
-| PPANEL_DB          | Configurare MySQL      | root:password@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS       | Configurare Redis      | redis://localhost:6379                     |
+| ARCHNET_DB          | Configurare MySQL      | root:password@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS       | Configurare Redis      | redis://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
