--- a/pages/th-TH/docs/server/config.mdx
+++ b/pages/th-TH/docs/server/config.mdx
@@ -59,8 +59,8 @@ Administer:
 
 | ตัวแปรสภาพแวดล้อม | รายการการตั้งค่า | ตัวอย่าง                                    |
 | ----------------- | ---------------- | :------------------------------------------ |
-| PPANEL_DB         | การตั้งค่า MySQL | root:password\@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS      | การตั้งค่า Redis | redis\://localhost:6379"                    |
+| ARCHNET_DB         | การตั้งค่า MySQL | root:password\@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS      | การตั้งค่า Redis | redis\://localhost:6379"                    |
 
 import Giscus from '@/components/giscus';
 
