--- a/pages/vi-VN/docs/server/binary.mdx
+++ b/pages/vi-VN/docs/server/binary.mdx
@@ -315,7 +315,7 @@ Administer:
 ```shell
 $ cat > /etc/systemd/system/archnet.service <<EOF
 [Unit]
-Description=PPANEL Server
+Description=ARCHNET Server
 After=network.target
 
 [Service]
