--- a/pages/vi-VN/docs/server/config.mdx
+++ b/pages/vi-VN/docs/server/config.mdx
@@ -59,8 +59,8 @@ Các biến môi trường được hỗ trợ như sau:
 
 | Biến môi trường | Mục cấu hình   | Ví dụ                                       |
 | --------------- | -------------- | :------------------------------------------ |
-| PPANEL_DB       | Cấu hình MySQL | root:password\@tcp(localhost:3306)/vpnboard |
-| PPANEL_REDIS    | Cấu hình Redis | redis\://localhost:6379                     |
+| ARCHNET_DB       | Cấu hình MySQL | root:password\@tcp(localhost:3306)/vpnboard |
+| ARCHNET_REDIS    | Cấu hình Redis | redis\://localhost:6379                     |
 
 import Giscus from '@/components/giscus';
 
