--- a/pages/en-US/swagger/admin.mdx
+++ b/pages/en-US/swagger/admin.mdx
@@ -1,3 +1,7 @@
 import Swagger from '@/components/swagger';
 
-<Swagger url='/swagger/admin.json' />
+<Swagger 
+  url='/swagger/admin.json' 
+  title="Admin API"
+  description="Administrative endpoints for managing users, servers, and system configuration."
+/>
