--- a/pages/fa-IR/swagger/admin.mdx
+++ b/pages/fa-IR/swagger/admin.mdx
@@ -1,3 +1,7 @@
 import Swagger from '@/components/swagger';
 
-<Swagger url='/swagger/admin.json' />
+<Swagger 
+  url='/swagger/admin.json' 
+  title="API مدیریت"
+  description="نقاط پایانی مدیریتی برای مدیریت کاربران، سرورها و تنظیمات سیستم."
+/>
