--- a/pages/fa-IR/swagger/common.mdx
+++ b/pages/fa-IR/swagger/common.mdx
@@ -1,3 +1,7 @@
 import Swagger from '@/components/swagger';
 
-<Swagger url='/swagger/common.json' />
+<Swagger 
+  url='/swagger/common.json' 
+  title="API عمومی"
+  description="نقاط پایانی عمومی که نیاز به احراز هویت ندارند."
+/>
