--- a/pages/fa-IR/swagger/node.mdx
+++ b/pages/fa-IR/swagger/node.mdx
@@ -1,3 +1,7 @@
 import Swagger from '@/components/swagger';
 
-<Swagger url='/swagger/node.json' />
+<Swagger 
+  url='/swagger/node.json' 
+  title="API نود"
+  description="نقاط پایانی ارتباط نود برای همگام‌سازی سرور و گزارش‌دهی."
+/>
