--- a/pages/en-US/swagger/common.mdx
+++ b/pages/en-US/swagger/common.mdx
@@ -1,5 +1,7 @@
 import Swagger from '@/components/swagger';
 
-<Swagger url='/swagger/common.json' />
-
-(Note: The provided text is code and does not require translation as it is already in English. The code remains unchanged.)
+<Swagger 
+  url='/swagger/common.json' 
+  title="Public API"
+  description="Public endpoints that don't require authentication."
+/>
