--- a/pages/en-US/swagger/node.mdx
+++ b/pages/en-US/swagger/node.mdx
@@ -1,6 +1,7 @@
 import Swagger from '@/components/swagger';
 
-<Swagger url='/swagger/node.json' />
-```{' '}
-
-(Note: The provided text is code and does not require translation as it is already in English. The code remains unchanged.)
+<Swagger 
+  url='/swagger/node.json' 
+  title="Node API"
+  description="Node communication endpoints for server synchronization and reporting."
+/>
