--- a/pages/fa-IR/swagger/user.mdx
+++ b/pages/fa-IR/swagger/user.mdx
@@ -1,3 +1,7 @@
 import Swagger from '@/components/swagger';
 
-<Swagger url='/swagger/user.json' />
+<Swagger 
+  url='/swagger/user.json' 
+  title="API کاربر"
+  description="نقاط پایانی کاربری برای مدیریت اشتراک و عملیات حساب کاربری."
+/>
